# ast-grep.github.io

./: .gitignore  .oxlintrc.json  .pre-commit-config.yaml  Cargo.toml  README.md  dprint.json  oxlint.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.github/: catalog.instruction.md  copilot-instructions.md
.github/instructions/: catalog.instructions.md
.github/workflows/: gh-pages.yml
crates/wasm/: Cargo.toml
scripts/: check-lang-consistency.mjs
src/: dump_tree.rs  lib.rs  utils.rs  wasm_lang.rs
website/: blog.md  check-lang-consistency.mjs  index.md  playground.md  pnpm-lock.yaml  vite.config.ts
website/.vitepress/: config.ts
website/.vitepress/theme/: custom.css  index.ts
website/_data/: blog.data.ts  catalog.data.ts  parsers.ts
website/advanced/: core-concepts.md  custom-language.md  faq.md  find-n-patch.md  how-ast-grep-works.md  language-injection.md  match-algorithm.md  pattern-parse.md  prompting.md  tool-comparison.md
website/blog/: ast-grep-agent.md  ast-grep-outline.md  code-search-design-space.md  code-search-design-space.md.draft  fearless-concurrency.md  how-to-debug.md  index.md  interactive-demo.md  mastering-ast-grep.md  migrate-bevy.md  more-llm-support.md  new-ver-38.md  new-ver-39.md  new-ver-42.md  new-ver-43.md  optimize-ast-grep.md  rule-simplification-workflow.md  stars-3000.md  stars-5000.md  stars-6000.md  stars-8000.md  tree-sitter-end-to-end.md  tree-sitter-glr-arena.md  tree-sitter-rust-migration.md  tree-sitter-rust-rewrite.md  typed-napi.md  yaml-vs-dsl.md
website/catalog/: Catalog.vue  RuleItem.vue  index.md  rule-template.md
website/catalog/c/: index.md  match-function-call.md  rewrite-method-to-function-call.md  yoda-condition.md
website/catalog/cpp/: find-struct-inheritance.md  fix-format-vuln.md  index.md
website/catalog/go/: defer-func-call-antipattern.md  find-func-declaration-with-prefix.md  index.md  match-function-call.md  match-package-import.md  unmarshal-tag-is-dash.md
website/catalog/html/: extract-i18n-key.md  index.md  upgrade-ant-design-vue.md
website/catalog/java/: find-field-with-type.md  index.md  no-unused-vars.md
website/catalog/kotlin/: ensure-clean-architecture.md  index.md
website/catalog/lua/: assert-eventually-terminated.md  index.md  ngx-log-string-concat.md
website/catalog/nix/: index.md
website/catalog/python/: index.md  migrate-openai-sdk.md  optional-to-none-union.md  prefer-generator-expressions.md  recursive-rewrite-type.md  refactor-pytest-fixtures.md  remove-async-await.md  rewrite-sqlalchemy-mapped-column.md  use-walrus-operator-in-if.md
website/catalog/ruby/: detect-path-traversal.md  index.md  migrate-action-filter.md  prefer-symbol-over-proc.md
website/catalog/rules/: redundant-usestate-type.md
website/catalog/rust/: avoid-duplicated-exports.md  boshen-footgun.md  find-top-syntactic-elements.md  get-digit-count-in-usize.md  index.md  redundant-unsafe-function.md  rewrite-indoc-macro.md  rust-2024-let-chain-candidate.md
website/catalog/solidity/: index.md
website/catalog/tsx/: avoid-jsx-short-circuit.md  avoid-nested-links.md  index.md  redundant-usestate-type.md  rename-svg-attribute.md  reverse-react-compiler.md  rewrite-mobx-component.md  unnecessary-react-hook.md
website/catalog/typescript/: avoid-jsx-short-circuit.md  find-import-file-without-extension.md  find-import-identifiers.md  (+12 more)
website/cheatsheet/: rule.md  yaml.md
website/contributing/: add-lang.md  development.md  how-to.md
website/guide/: api-usage.md  editor-integration.md  introduction.md  outline-code.md  pattern-syntax.md  quick-start.md  rewrite-code.md  rule-config.md  scan-project.md  test-rule.md  tooling-overview.md
website/links/: roadmap.md
website/public/: CNAME  schema.json  tree-sitter-bash.wasm  tree-sitter-css.wasm  tree-sitter-dart.wasm  tree-sitter-html.wasm  tree-sitter-kotlin.wasm  tree-sitter-ruby.wasm  tree-sitter-rust.wasm  tree-sitter-scala.wasm  tree-sitter-toml.wasm  tree-sitter-tsx.wasm  tree-sitter-typescript.wasm  tree-sitter-yaml.wasm
website/reference/: api.md  cli.md  languages.md  outline-rule-fields.md  outline-rules.md  playground.md  rule.md  sgconfig.md  yaml.md
website/src/: App.vue  BlogIndex.vue  Homepage.vue  state.ts  style.css  utils.ts
(+108 files in other folders)
