[package]
name = "ast-grep-wasm"
version = "0.1.6"
authors = ["HerringtonDarkholme <2883231+HerringtonDarkholme@users.noreply.github.com>"]
edition = "2018"
description = "Search and Rewrite code at large scale using precise AST pattern"
keywords = ["ast", "pattern", "codemod", "search", "rewrite"]
license = "MIT"
repository = "https://github.com/ast-grep/ast-grep"
rust-version = "1.63"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
wasm-bindgen = {version = "0.2.83", features = ["serde-serialize"]}
wasm-bindgen-futures = "0.4.33"
serde = { version = "1.0", features = ["derive"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

once_cell = "1.14.0"
wee_alloc = { version = "0.4.5" }
ast-grep-core = "0.1.6"
ast-grep-config = "0.1.6"
web-tree-sitter-sys = "1.3.0"
tree-sitter = { version = "0.9", package = "tree-sitter-facade" }

[dev-dependencies]
wasm-bindgen-test = "0.3.33"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
