[package]
name = "ast-grep-wasm"
version = "0.2.6"
authors = ["HerringtonDarkholme <2883231+HerringtonDarkholme@users.noreply.github.com>"]
edition = "2018"
description = "Search and Rewrite code at large scale using precise AST pattern"
keywords = ["ast", "pattern", "codemod", "search", "rewrite"]
license = "MIT"
repository = "https://github.com/ast-grep/ast-grep"
rust-version = "1.63"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
wasm-bindgen = {version = "0.2.86", features = ["serde-serialize"]}
wasm-bindgen-futures = "0.4.36"
serde = { version = "1.0", features = ["derive"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

once_cell = "1.17.1"
wee_alloc = { version = "0.4.5" }
ast-grep-core = { version = "0.5.7" }
ast-grep-config = { version = "0.5.7" }
ast-grep-language = { version = "0.5.7", default-features = false }
web-tree-sitter-sg = "1.3.3"
tree-sitter = { version = "0.9.2", package = "tree-sitter-facade-sg" }
serde-wasm-bindgen = "0.5"
serde_json = "1.0.96"

[dev-dependencies]
wasm-bindgen-test = "0.3.36"
tree-sitter-rust = "0.20.3"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
