[package]
name = "ast-grep-wasm"
version = "0.26.3"
authors = ["HerringtonDarkholme <2883231+HerringtonDarkholme@users.noreply.github.com>"]
edition = "2018"
description = "Search and Rewrite code at large scale using precise AST pattern"
keywords = ["ast", "pattern", "codemod", "search", "rewrite"]
license = "MIT"
repository = "https://github.com/ast-grep/ast-grep"
rust-version = "1.63"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
wasm-bindgen = {version = "0.2.92", features = ["serde-serialize"]}
wasm-bindgen-futures = "0.4.42"
serde = { version = "1.0", features = ["derive"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

once_cell = "1.19.0"
wee_alloc = { version = "0.4.5" }
ast-grep-core = { version = "0.35.0" }
ast-grep-config = { version = "0.36.0" }
ast-grep-language = { version = "0.35.0", default-features = false }
web-tree-sitter-sg = "0.24.4"
tree-sitter = { version = "0.24.5", package = "tree-sitter-facade-sg" }
serde-wasm-bindgen = "0.6"
serde_json = "1.0.116"

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true